chore: fix navigation alignment

--- a/src/features/components/templates/navigation/template/desktop-menu/nav-items.module.scss
+++ b/src/features/components/templates/navigation/template/desktop-menu/nav-items.module.scss
@@ -55,7 +55,7 @@
         }
 
         & .active_trade_section {
-            inset-inline-start: -20rem;
+            inset-inline-start: -25rem;
         }
     }
 }
